feat(nosql): changed database from postgres to mongodb
